Begin styling main section.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p>WORKFLOWS</p>
         </div>
 
-        <div class="nav-item">
+        <div class="nav-item job-boards">
           <div class="icon-div">
             <i class="fas fa-globe"></i>
           </div>
@@ -129,19 +129,52 @@
 
   <main>
     <nav class="nav-search">
-      <div class="nav-hamburger-div">
-        <i class="fas fa-caret-left"></i>
+      <article class="nav-search-article">
+        <i class="fas fa-caret-left" id="caret"></i>
         <i class="fas fa-bars"></i>
-      </div>
-      <input type="text" placeholder="<i class='fas fa-search'></i>  Search for a job, task, or resume">
-      
+      </article>
+      <article class="nav-input-article nav-search-article">
+        <i class='fas fa-search'></i>
+        <input type="text" placeholder="Search for a job, task, or resume">
+      </article>
+      <article class="nav-search-article">
+        <i class="fas fa-user-plus"></i>
+      </article>
+      <article class="nav-search-article">
+        <i class="fas fa-calendar-plus"></i>
+      </article>
+      <article class="nav-search-article">
+        <i class="fas fa-th"></i>
+      </article> 
     </nav>
 
 
 
 
     <nav class="nav-dashboard">
-      
+      <div class="dashboard-div">
+        <article class="nav-dashboard-article job-title-article">
+          <h1 class="job-title-h1">Customer Service Representative</h1>
+          <p><i class="fas fa-map-marker-alt"></i> Boulder, CO  -  <span class="preview">Preview this post</span></p>
+        </article>
+
+        <article class="nav-dashboard-article dashboard-btns-article">
+          <div class="open-btn"><i class="fas fa-circle"></i> OPEN</div>
+          <div class="btn"><i class="fas fa-bookmark"></i></div>
+          <div class="btn"><i class="fas fa-pen"></i></div>
+          <div class="btn"><i class="fas fa-trash-alt"></i></div>
+        </article>
+      </div>
+
+      <article class="nav-dashboard-article dashboard-pipeline-article">
+        <p class="summary-p">SUMMARY</p>
+        <p>APPLICANTS</p>
+        <p>JOB BOARD</p>
+        <p>INTERVIEWS</p>
+        <p>ACTIVITY</p>
+        <p>BROADCAST</p>
+        <p>NOTIFICATIONS</p>
+      </article>
     </nav>
 
 
