Add media query for 320px

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
   <main>
     <nav class="nav-search">
-      <article class="nav-search-article">
+      <article class="nav-search-article hamburger">
         <i class="fas fa-caret-left" id="caret"></i>
         <i class="fas fa-bars"></i>
       </article>
@@ -137,13 +137,13 @@
         <i class='fas fa-search'></i>
         <input type="text" placeholder="Search for a job, task, or resume">
       </article>
-      <article class="nav-search-article">
+      <article class="nav-search-article add-user">
         <i class="fas fa-user-plus"></i>
       </article>
-      <article class="nav-search-article">
+      <article class="nav-search-article calendar">
         <i class="fas fa-calendar-plus"></i>
       </article>
-      <article class="nav-search-article">
+      <article class="nav-search-article nine">
         <i class="fas fa-th"></i>
       </article> 
     </nav>
@@ -170,10 +170,11 @@
         <p class="summary-p">SUMMARY</p>
         <p>APPLICANTS</p>
         <p>JOB BOARD</p>
-        <p>INTERVIEWS</p>
-        <p>ACTIVITY</p>
-        <p>BROADCAST</p>
-        <p>NOTIFICATIONS</p>
+        <p class="minimize-p">INTERVIEWS</p>
+        <p class="minimize-p">ACTIVITY</p>
+        <p class="minimize-p">BROADCAST</p>
+        <p class="minimize-p">NOTIFICATIONS</p>
+        <p class="chevron-right"><i class="fas fa-chevron-circle-right"></i></p>
       </article>
     </nav>
 
@@ -355,7 +356,7 @@
             <p class="header-p"><i class="fas fa-globe-africa"></i> Link to this job</p>
             <p class="description-p">You can automatically upload multiple resumes to this job by emailing the address below.</p>
             <div>
-              <p class="link-p">https://www.careerbuilder.com...</p>
+              <p class="link-p">https://www.careerbuilde...</p>
               <button>Copy</button>
             </div>
           </article>
@@ -364,7 +365,7 @@
             <p class="header-p"><i class="fas fa-link"></i> Use this Button Widget</p>
             <p class="description-p">This widget embeds the buttons for sharing the job for submitting a resume on your website.</p>
             <div>
-              <p class="link-p"><"script embed"https://google...</p>
+              <p class="link-p"><"script embed"https://go...</p>
               <button>Copy</button>
             </div>
           </article>
